Fix scrolling behaviour on iOS.

--- a/src/configs/_base.scss
+++ b/src/configs/_base.scss
@@ -8,4 +8,5 @@ $base-font-family: 'Libre Franklin', -apple-system, BlinkMacSystemFont, 'Segoe U
 body {
     background: $colorWhite;
     font-family: $base-font-family;
+    -webkit-overflow-scrolling: touch;
 }
